--- a/404.md
+++ b/404.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Sayfa  Bulunamadı
-permalink: /sayfa-yok/
+permalink: /sayfa-yok.html
 nocomments: true
 public: false
 ---
